Static factory methods. Move from TestNG to JUnit5.
TestNG could not work with the static factory methods specified for the java ServiceLoader with modules. JUnit5 is working properly. Reimplements some services to use static factory methods and atomic reference to ensure singleton service providers.