@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>tinkar</artifactId>
         <groupId>org.hl7.tinkar</groupId>
+        <artifactId>tinkar</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
+
     <artifactId>integration</artifactId>
-    <packaging>jar</packaging>
-    <name>TINKAR: Integration tests</name>
+
     <dependencies>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
@@ -42,20 +43,18 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>search-provider</artifactId>
             <version>${project.parent.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>protobuf</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
         </dependency>
     </dependencies>
     <build>
@@ -118,62 +117,15 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>ephemeral-suite</id>
                         <goals>
                             <goal>integration-test</goal>
                             <goal>verify</goal>
                         </goals>
+                        <!--                        <configuration>-->
+                        <!--                            <test>org.hl7.tinkar.integration.provider.ephemeral.TestEphemeralProvider</test>-->
+                        <!--                        </configuration>-->
                         <configuration>
-                            <argLine>--enable-preview</argLine>
-                            <skipTests>false</skipTests>
-                            <trimStackTrace>false</trimStackTrace>
-                            <suiteXmlFiles>
-                                <suiteXmlFile>src/test/resources/ephemeral-testng.xml</suiteXmlFile>
-                            </suiteXmlFiles>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>spinedstore-suite</id>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                        <configuration>
-                            <argLine>--enable-preview</argLine>
-                            <skipTests>false</skipTests>
-                            <trimStackTrace>false</trimStackTrace>
-                            <suiteXmlFiles>
-                                <suiteXmlFile>src/test/resources/spinedstore-testng.xml</suiteXmlFile>
-                            </suiteXmlFiles>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>mvstore-suite</id>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                        <configuration>
-                            <argLine>--enable-preview</argLine>
-                            <skipTests>false</skipTests>
-                            <trimStackTrace>false</trimStackTrace>
-                            <suiteXmlFiles>
-                                <suiteXmlFile>src/test/resources/mvstore-testng.xml</suiteXmlFile>
-                            </suiteXmlFiles>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>coordinate-suite</id>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                        <configuration>
-                            <argLine>--enable-preview</argLine>
-                            <trimStackTrace>false</trimStackTrace>
-                            <suiteXmlFiles>
-                                <suiteXmlFile>src/test/resources/coordinate-testng.xml</suiteXmlFile>
-                            </suiteXmlFiles>
+                            <includes>**/Test*.java</includes>
                         </configuration>
                     </execution>
                 </executions>
